--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
 html{
-  background-color: rgb(65, 224, 216) ;
-  font-style: oblique
+  background-color: rgb(115, 223, 105);
 }
 img{
-  max-height: 300px ;
-  border: 2px inset black
+  max-height: 300px;
+  border: 4px inset black;
 }
+h1{
+  text-decoration: underline;
+  color: rgb(47, 63, 109);
+}
+h2{
+  color: rgb(47, 63, 109);
+  font-style: oblique;
+}  
